Fix nixpacks syntax error - use gpp instead of g++

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["python310", "gcc", "g++", "fftw", "sqlite"]
+nixPkgs = ["python310", "gcc", "gpp", "fftw", "sqlite"]
 
 [phases.install]
 cmds = [
