--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,12 @@
 [phases.setup]
-nixPkgs = ["python310", "python310Packages.pip", "gcc", "gpp", "fftw", "sqlite"]
+nixPkgs = ["python310", "python310Packages.pip", "python310Packages.virtualenv", "gcc", "gpp", "fftw", "sqlite"]
 
 [phases.install]
 cmds = [
-    "pip install -r app/requirements.txt",
-    "python app/setup_db.py"
+    "python -m venv /opt/venv",
+    ". /opt/venv/bin/activate && pip install -r app/requirements.txt",
+    ". /opt/venv/bin/activate && python app/setup_db.py"
 ]
 
 [start]
-cmd = "cd app && python serve.py --port $PORT --address 0.0.0.0"
+cmd = ". /opt/venv/bin/activate && cd app && python serve.py --port $PORT --address 0.0.0.0"
