--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,8 +8,5 @@ cmds = [
     ". /opt/venv/bin/activate && python app/setup_db.py"
 ]
 
-[variables]
-LD_LIBRARY_PATH = "/nix/store/*-gcc-*/lib:$LD_LIBRARY_PATH"
-
 [start]
-cmd = ". /opt/venv/bin/activate && cd app && python serve.py --port $PORT --address 0.0.0.0"
+cmd = "export LD_LIBRARY_PATH=$(find /nix/store -name 'libstdc++.so.6' -exec dirname {} \\; | head -n 1):$LD_LIBRARY_PATH && . /opt/venv/bin/activate && cd app && python serve.py --port $PORT --address 0.0.0.0"
