--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,9 +5,8 @@ nixPkgs = ["python310", "python310Packages.pip", "python310Packages.virtualenv",
 cmds = [
     "python -m venv /opt/venv",
     ". /opt/venv/bin/activate && pip install -r app/requirements.txt",
-    ". /opt/venv/bin/activate && python app/setup_db.py",
-    "chmod +x start.sh"
+    ". /opt/venv/bin/activate && python app/setup_db.py"
 ]
 
 [start]
-cmd = "./start.sh"
+cmd = "bash start.sh"
